RESOLVED FIXED124224
Manage XMLHttpRequestUpload, XSLImportRule, XMLErrors, XML pending callback classes through std::unique_ptr
https://bugs.webkit.org/show_bug.cgi?id=124224
Summary Manage XMLHttpRequestUpload, XSLImportRule, XMLErrors, XML pending callback c...
Zan Dobersek
Reported 2013-11-12 12:47:15 PST
Manage XMLHttpRequestUpload, XSLImportRule, XMLErrors, XML pending callback classes through std::unique_ptr
Attachments
Patch (14.82 KB, patch)
2013-11-12 12:52 PST, Zan Dobersek
no flags
Patch (14.79 KB, patch)
2013-11-12 12:53 PST, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2013-11-12 12:52:05 PST
Zan Dobersek
Comment 2 2013-11-12 12:53:34 PST
Zan Dobersek
Comment 3 2013-11-12 22:50:04 PST
Comment on attachment 216708 [details] Patch Clearing flags on attachment: 216708 Committed r159178: <http://trac.webkit.org/changeset/159178>
Zan Dobersek
Comment 4 2013-11-12 22:50:10 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.