Manage XMLHttpRequestUpload, XSLImportRule, XMLErrors, XML pending callback classes through std::unique_ptr https://bugs.webkit.org/show_bug.cgi?id=124224

Reviewed by Anders Carlsson.

Use std::unique_ptr to handle objects of various XML classes that were previously managed by OwnPtr.
This removes usage of OwnPtr and PassOwnPtr under Source/WebCore/xml/.

* xml/XMLHttpRequest.cpp:
(WebCore::XMLHttpRequest::upload):
* xml/XMLHttpRequest.h:
* xml/XMLHttpRequestUpload.h:
* xml/XSLImportRule.h:
* xml/XSLStyleSheet.h:
* xml/XSLStyleSheetLibxslt.cpp:
(WebCore::XSLStyleSheet::loadChildSheet):
* xml/parser/XMLDocumentParser.cpp:
(WebCore::XMLDocumentParser::handleError):
* xml/parser/XMLDocumentParser.h:
* xml/parser/XMLDocumentParserLibxml2.cpp:
(WebCore::PendingCallbacks::PendingCallbacks):
(WebCore::PendingCallbacks::appendStartElementNSCallback):
(WebCore::PendingCallbacks::appendEndElementNSCallback):
(WebCore::PendingCallbacks::appendCharactersCallback):
(WebCore::PendingCallbacks::appendProcessingInstructionCallback):
(WebCore::PendingCallbacks::appendCDATABlockCallback):
(WebCore::PendingCallbacks::appendCommentCallback):
(WebCore::PendingCallbacks::appendInternalSubsetCallback):
(WebCore::PendingCallbacks::appendErrorCallback):
(WebCore::PendingCallbacks::callAndRemoveFirstCallback):
(WebCore::XMLDocumentParser::XMLDocumentParser):


Canonical link: https://commits.webkit.org/142463@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159178 268f45cc-cd09-0410-ab3c-d52691b4dbfc